--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,16 @@ injrs = "0.1.2"
 winres = "0.1"
 log = "0.4"
 simplelog = "0.12.2"
+actix-web = "4.0"
+base64 = { version = "0.21", features = ["alloc"] }
+hmac = "0.12"
+url = "2.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+webbrowser = "0.5"
+tokio = { version = "1", features = ["full"] }
+urlencoding = "2.1.3"
+dotenv = "0.15.0"
 
 
 [build-dependencies]
